[workspace]
resolver = "2"
members = [
  "enclave-runner",
  "tokio",
  "tokio-macros",
  "tokio-test",
  "tokio-stream",
  "tokio-util",

  # Internal
  "benches",
  "examples",
  "stress-test",
  "tests-build",
  "tests-integration",
]

[patch.crates-io]
mio = { git = "https://github.com/fortanix/mio", branch = "raoul/sgx-port-0.8.9" }
enclave-runner = { git = "https://github.com/fortanix/rust-sgx", branch = "master" }
sgxs = { git = "https://github.com/fortanix/rust-sgx", branch = "master" }
sgx-isa = { git = "https://github.com/fortanix/rust-sgx", branch = "master" }
sgxs-loaders = { git = "https://github.com/fortanix/rust-sgx", branch = "master" }
